Don't reset encoders. This screws up any axis using HOME_USE_INDEX. Clean up estop messages.

--- a/Mill7i85s/Mill7i85s.ini
+++ b/Mill7i85s/Mill7i85s.ini
@@ -50,35 +50,33 @@ MAX_SPINDLE_0_OVERRIDE = 1.25
 #
 # User Created Message HAL Pins.
 #
-MESSAGE_BOLDTEXT = Driver EStop bold text
-MESSAGE_TEXT = Driver Estop text
+MESSAGE_TEXT = Stepper Driver EStop.
 MESSAGE_TYPE = okdialog
-MESSAGE_PINNAME = driver-estop
+MESSAGE_PINNAME = estop-driver
 
-MESSAGE_BOLDTEXT = OverTravel EStop bold text
-MESSAGE_TEXT = OverTravel EStop text
+MESSAGE_TEXT = Tool length overtravel EStop.
 MESSAGE_TYPE = okdialog
-MESSAGE_PINNAME = length-estop
+MESSAGE_PINNAME = estop-overtravel
 
-MESSAGE_BOLDTEXT = x Quadrature Estop bold text
-MESSAGE_TEXT = x Quadrature Estop text
+MESSAGE_TEXT = Spindle VFD EStop.
 MESSAGE_TYPE = okdialog
-MESSAGE_PINNAME = x-encoder-estop
+MESSAGE_PINNAME = estop-VFD
 
-MESSAGE_BOLDTEXT = y Quadrature Estop bold text
-MESSAGE_TEXT = y Quadrature Estop  text
+MESSAGE_TEXT = x Quadrature Fault.
 MESSAGE_TYPE = okdialog
-MESSAGE_PINNAME = y-encoder-estop
+MESSAGE_PINNAME = estop-x-encoder
 
-MESSAGE_BOLDTEXT = z Quadrature Estop  bold text
-MESSAGE_TEXT = z Quadrature Estop  text
+MESSAGE_TEXT = y Quadrature Fault.
 MESSAGE_TYPE = okdialog
-MESSAGE_PINNAME =  z-encoder-estop
+MESSAGE_PINNAME = estop-y-encoder
 
-MESSAGE_BOLDTEXT = Spindle Quadrature Estop  bold text
-MESSAGE_TEXT = Spindle Quadrature Estop text
+MESSAGE_TEXT = z Quadrature Fault.
 MESSAGE_TYPE = okdialog
-MESSAGE_PINNAME = s-encoder-estop
+MESSAGE_PINNAME =  estop-z-encoder
+
+MESSAGE_TEXT = Spindle Quadrature Estop/Fault.
+MESSAGE_TYPE = okdialog
+MESSAGE_PINNAME = estop-s-encoder
 
 [PROBE_SCREEN]
 # Offset from [AXIS_Z]MAX_LIMIT for performing moves during various probe
@@ -153,7 +151,6 @@ HALUI = halui
 HALFILE = Mill7i85s.hal
 HALFILE = Spindle.hal
 HALFILE = estop-chain.hal
-HALFILE = quad_encoder.hal
 HALFILE = postgui_load.hal # file_with_all_loads_for_postgui.hal
 POSTGUI_HALFILE = postgui_call_list.hal
 SHUTDOWN = shutdown.hal
