Remove unused debounce component and a bunch of unused halui signals. Move probe logic to probe.hal. Remove some unused signals in prep for documenting all signals.

--- a/Mill7i85s/Mill7i85s.ini
+++ b/Mill7i85s/Mill7i85s.ini
@@ -149,6 +149,7 @@ CARD0=hm2_7i92.0
 TWOPASS = on
 HALUI = halui
 HALFILE = Mill7i85s.hal
+HALFILE = probe.hal
 HALFILE = Spindle.hal
 HALFILE = estop-chain.hal
 HALFILE = postgui_load.hal # file_with_all_loads_for_postgui.hal
