--- a/Mill/Mill.ini
+++ b/Mill/Mill.ini
@@ -148,7 +148,7 @@ CARD0=hm2_7i92.0
 [HAL]
 TWOPASS = on
 HALUI = halui
-HALFILE = Mill7i85s.hal
+HALFILE = Mill.hal
 HALFILE = probe.hal
 HALFILE = Spindle.hal
 HALFILE = estop-chain.hal
