Tune y. XZ set to stepgen mode.

--- a/Mill/Mill.ini
+++ b/Mill/Mill.ini
@@ -1,3 +1,4 @@
+
 [EMC]
 MACHINE = Mill7i85S
 DEBUG = 0
@@ -196,17 +197,20 @@ MAX_VELOCITY = 20.0
 MAX_ACCELERATION = 250.0
 ENCODER_SCALE = 200
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
-# If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
-STEPGEN_MAXVEL = 31.25
-STEPGEN_MAXACCEL = 937.5
-P = 300
-I = 1.25
+STEPGEN_MAXVEL = 30
+STEPGEN_MAXACCEL = 300
+#
+# When using the stepgen for pid feedback. Use P=1000, FF1=1.0. 
+#
+P = 65
+I = 0
 D = 0
 FF0 = 0
 FF1 = 1
 FF2 = 0
+
 BIAS = 0
-DEADBAND = 0.01
+DEADBAND = 0.0075
 MAX_OUTPUT = 0
 # these are in nanoseconds
 DIRSETUP   = 10000
@@ -251,17 +255,17 @@ MAX_ACCELERATION = 250.0
 STEPGEN_MAXVEL = 30
 STEPGEN_MAXACCEL = 300
 #
-# For a closed loop stepper. Use P=1000, FF1=1.0. 
-# Closed the loop with magnetic scale, so different parameters are required.
+# When using the stepgen for pid feedback. Use P=1000, FF1=1.0. 
 #
-P = 150
-I = 0.1
+P = 65
+I = 0
 D = 0
 FF0 = 0
-FF1 = 0.95
+FF1 = 1
 FF2 = 0
+
 BIAS = 0
-DEADBAND = 0.01
+DEADBAND = 0.0075
 MAX_OUTPUT = 0
 
 ENCODER_SCALE = 1000
@@ -306,16 +310,21 @@ MAX_VELOCITY = 12.0
 MAX_ACCELERATION = 200.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
+# The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 STEPGEN_MAXVEL = 30
-STEPGEN_MAXACCEL = 400
-P = 150
-I = 0.1
+STEPGEN_MAXACCEL = 300
+#
+# When using the stepgen for pid feedback. Use P=1000, FF1=1.0. 
+#
+P = 65
+I = 0
 D = 0
 FF0 = 0
 FF1 = 1
 FF2 = 0
+
 BIAS = 0
-DEADBAND = 0.01
+DEADBAND = 0.0075
 MAX_OUTPUT = 0
 ENCODER_SCALE = 200
 # these are in nanoseconds
