Use [MESA] and [HM2] variables in .ini.

--- a/Mill/Mill.ini
+++ b/Mill/Mill.ini
@@ -1,3 +1,13 @@
+[MESA]
+VERSION = 2.1.0
+BOARD = 7i92
+BOARD_NAME = 7i92
+FIRMWARE = None
+CARD_1 = 7i85s
+
+[HM2]
+DRIVER = hm2_eth
+ADDRESS = 10.10.10.10
 
 [EMC]
 MACHINE = Mill7i85S
