--- a/Mill/Mill.ini
+++ b/Mill/Mill.ini
@@ -3,7 +3,8 @@ VERSION = 2.1.0
 BOARD = 7i92
 BOARD_NAME = 7i92
 FIRMWARE = None
-CARD_1 = 7i85s
+CARD0 = hm_7i92.0
+#CARD_1 = 7i85s
 
 [HM2]
 DRIVER = hm2_eth
@@ -151,10 +152,6 @@ CYCLE_TIME = 0.010
 EMCMOT = motmod
 COMM_TIMEOUT = 1.0
 SERVO_PERIOD = 1000000
-
-[HMOT]
-# **** This is for info only ****
-CARD0=hm2_7i92.0
 
 [HAL]
 TWOPASS = on
