--- a/Mill/Mill.ini
+++ b/Mill/Mill.ini
@@ -62,30 +62,37 @@ MAX_SPINDLE_0_OVERRIDE = 1.25
 #
 # User Created Message HAL Pins.
 #
+MESSAGE_BOLDTEXT = NONE
 MESSAGE_TEXT = Stepper Driver EStop.
 MESSAGE_TYPE = okdialog
 MESSAGE_PINNAME = estop-driver
 
+MESSAGE_BOLDTEXT = NONE
 MESSAGE_TEXT = Tool length overtravel EStop.
 MESSAGE_TYPE = okdialog
 MESSAGE_PINNAME = estop-overtravel
 
+MESSAGE_BOLDTEXT = NONE
 MESSAGE_TEXT = Spindle VFD EStop.
 MESSAGE_TYPE = okdialog
 MESSAGE_PINNAME = estop-VFD
 
+MESSAGE_BOLDTEXT = NONE
 MESSAGE_TEXT = x Quadrature Fault.
 MESSAGE_TYPE = okdialog
 MESSAGE_PINNAME = estop-x-encoder
 
+MESSAGE_BOLDTEXT = NONE
 MESSAGE_TEXT = y Quadrature Fault.
 MESSAGE_TYPE = okdialog
 MESSAGE_PINNAME = estop-y-encoder
 
+MESSAGE_BOLDTEXT = NONE
 MESSAGE_TEXT = z Quadrature Fault.
 MESSAGE_TYPE = okdialog
 MESSAGE_PINNAME =  estop-z-encoder
 
+MESSAGE_BOLDTEXT = NONE
 MESSAGE_TEXT = Spindle Quadrature Estop/Fault.
 MESSAGE_TYPE = okdialog
 MESSAGE_PINNAME = estop-s-encoder
@@ -102,9 +109,9 @@ Z_SAFE_TRAVEL_OFFSET = -0.1
 # Absolute coordinates of the toolsetter pad 
 X = 325
 Y = 175
-Z = 350
+Z = 250
 # Maximum search distance and direction (sign)
-MAXPROBE = -270
+MAXPROBE = -200
 # Speed of movements during working in Probe Screen
 #RAPID_SPEED = 800
 # Diameter of toolsetter pad 
@@ -120,20 +127,38 @@ Y = 175
 Z = 350
 
 [RS274NGC]
+INI_VARS = 1 
+#LOG_LEVEL = 0 Specify the log_level (default: 0)
+#LOG_FILE = file-name.log For specify the file used for log the data.
 PARAMETER_FILE = linuxcnc.var
-FEATURES = 12
-SUBROUTINE_PATH = macros
-#REMAP=M6    modalgroup=6 prolog=change_prolog  ngc=tool-change  epilog=change_prolog
-
-#RETAIN_G43 = 0
-#INI_VARS = 1
-#HAL_PIN_VARS = 1
-#SUBROUTINE_PATH = macros:psng/macros
-#REMAP=M6   modalgroup=6  prolog=change_prolog   ngc=psng_manual_change  epilog=change_epilog
+#SUBROUTINE_PATH = ncsubroutines:/tmp/testsubs:lathesubs:millsubs - Specifies a colon (:) separated list of up to 10 directories to be searched when single-file subroutines are specified in G-code. These directories are searched after searching [DISPLAY]PROGRAM_PREFIX (if it is specified) and before searching [WIZARD]WIZARD_ROOT (if specified). The paths are searched in the order that they are listed. The first matching subroutine file found in the search is used. Directories are specified relative to the current directory for the INI file or as absolute paths. The list must contain no intervening whitespace.
+SUBROUTINE_PATH = macros:./macros
+HAL_PIN_VARS = 1 
+RETAIN_G43 = 0 
+OWORD_NARGS = 0 
+NO_DOWNCASE_OWORD = 0 
+OWORD_WARNONLY = 0 
+DISABLE_G92_PERSISTENCE = 0 
+DISABLE_FANUC_STYLE_SUB = 0 
+ON_ABORT_COMMAND=o <on_abort> call
+REMAP=M6 modalgroup=6 prolog=change_prolog ngc=tool-change  epilog=change_epilog
+#REMAP=M6  modalgroup=6 prolog=change_prolog ngc=change epilog=change_epilog
 
 [PYTHON]
-#PATH_PREPEND = ./python
-#TOPLEVEL = python/toplevel.py
+#TOPLEVEL = <filename> Filename of the initial Python script to execute on startup. This script is responsible for setting up the package name structure, see below.
+#PATH_PREPEND = <directory> Prepend this directory to PYTHON_PATH. A repeating group.
+#PATH_APPEND = <directory> Append this directory to PYTHON_PATH. A repeating group.
+#LOG_LEVEL = <integer> Log level of plugin-related actions. Increase this if you suspect problems. Can be very verbose.
+#RELOAD_ON_CHANGE = [0|1] Reload the TOPLEVEL script if the file was changed. Handy for debugging but currently incurs some runtime overhead. Turn this off for production configurations.
+#PYTHON_TASK = [0|1] Start the Python task plug in. Experimental. See xxx.
+
+#ncfiles/remap_lib/python-stdglue/stdglue.py
+#M:\linuxcnc\configs\nc_files\remap_lib\common_nc_subs (on_abort.ngc, reset_state.ngc)
+#M:\linuxcnc\configs\nc_files\remap-subroutines  (change.ngc, on_abort.ngc, prepare.ngc, qt_auto_probe_tool.ngc)
+
+# TOPLEVEL activates the python plugin.
+TOPLEVEL=~/linuxcnc/configs/Mill/python/toplevel.py
+PATH_PREPEND=~/linuxcnc/configs/Mill/python
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
