Working Tool Length Measurement (TLM).

--- a/Mill/Mill.ini
+++ b/Mill/Mill.ini
@@ -103,7 +103,7 @@ MESSAGE_PINNAME = estop-s-encoder
 Z_SAFE_TRAVEL_OFFSET = -0.1
 
 #
-# https://github.com/verser-git/probe_screen_v2/blob/master/my-mill.ini
+# TOOLSENSOR is location directly above the TLM.
 #
 [TOOLSENSOR]
 # Absolute coordinates of the toolsetter pad 
@@ -120,11 +120,14 @@ MAXPROBE = -200
 #REV_ROTATION_SPEED = 0
 RETRACT_HEIGHT = 1.5 
 
+#
+# CHANGE_POSITION is the tool change position which may be different that the TLM.
+#
 [CHANGE_POSITION]
 # Absolute coordinates tool change position.
-X = 325
-Y = 175
-Z = 350
+X = 324
+Y = 174
+Z = 249
 
 [RS274NGC]
 INI_VARS = 1 
