Change pid maxerror to 0.0. Slight move to TOOLSENSOR location. Seeing some backlash that is probably throwing off FERROR, MIN_FERROR at direction changes. Adjust DEADBANDs down, increase X steps.

--- a/Mill/Mill.ini
+++ b/Mill/Mill.ini
@@ -107,11 +107,11 @@ Z_SAFE_TRAVEL_OFFSET = -0.1
 #
 [TOOLSENSOR]
 # Absolute coordinates of the toolsetter pad 
-X = 325
-Y = 175
-Z = 250
+X = 327.5
+Y = 170
+Z = 350
 # Maximum search distance and direction (sign)
-MAXPROBE = -200
+MAXPROBE = -350
 # Speed of movements during working in Probe Screen
 #RAPID_SPEED = 800
 # Diameter of toolsetter pad 
@@ -125,9 +125,9 @@ RETRACT_HEIGHT = 1.5
 #
 [CHANGE_POSITION]
 # Absolute coordinates tool change position.
-X = 324
-Y = 174
-Z = 249
+X = 325
+Y = 170
+Z = 349
 
 [RS274NGC]
 INI_VARS = 1 
@@ -135,11 +135,18 @@ INI_VARS = 1
 #LOG_FILE = file-name.log For specify the file used for log the data.
 PARAMETER_FILE = linuxcnc.var
 #SUBROUTINE_PATH = ncsubroutines:/tmp/testsubs:lathesubs:millsubs - Specifies a colon (:) separated list of up to 10 directories to be searched when single-file subroutines are specified in G-code. These directories are searched after searching [DISPLAY]PROGRAM_PREFIX (if it is specified) and before searching [WIZARD]WIZARD_ROOT (if specified). The paths are searched in the order that they are listed. The first matching subroutine file found in the search is used. Directories are specified relative to the current directory for the INI file or as absolute paths. The list must contain no intervening whitespace.
+#FEATURES & 0x1  -> RETAIN_G43
+#FEATURES & 0x2  -> OWORD_NARGS
+#FEATURES & 0x4  -> INI_VARS
+#FEATURES & 0x8  -> HAL_PIN_VARS
+#FEATURES & 0x10 -> NO_DOWNCASE_OWORD
+#FEATURES & 0x20 -> OWORD_WARNONLY
+
 SUBROUTINE_PATH = macros:./macros
 HAL_PIN_VARS = 1 
 RETAIN_G43 = 0 
-OWORD_NARGS = 0 
-NO_DOWNCASE_OWORD = 0 
+OWORD_NARGS = 1 
+NO_DOWNCASE_OWORD = 1
 OWORD_WARNONLY = 0 
 DISABLE_G92_PERSISTENCE = 0 
 DISABLE_FANUC_STYLE_SUB = 0 
@@ -226,8 +233,8 @@ MAX_LIMIT = 419.0
 
 [JOINT_0]
 TYPE = LINEAR
-FERROR = 1.0
-MIN_FERROR = 0.5
+FERROR = 0.5
+MIN_FERROR = 0.05
 MAX_VELOCITY = 20.0
 MAX_ACCELERATION = 250.0
 ENCODER_SCALE = 200
@@ -245,7 +252,7 @@ FF1 = 1
 FF2 = 0
 
 BIAS = 0
-DEADBAND = 0.0075
+DEADBAND = 0.003
 MAX_OUTPUT = 0
 # these are in nanoseconds
 DIRSETUP   = 10000
@@ -253,9 +260,9 @@ DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
 
-#STEPS_PER_REV = 1000
-#TURNS_PER_MM = 1/5
-STEP_SCALE = 200 
+#STEPS_PER_REV = 2000 set by DIP settings on HSC57 driver.
+#TURNS_PER_MM = 1/5 ballscrew moves 5 mm per revolution.
+STEP_SCALE = 400 
 MIN_LIMIT = -0.1
 MAX_LIMIT = 419.0
 
@@ -281,8 +288,8 @@ MAX_LIMIT = 180.0
 
 [JOINT_1]
 TYPE = LINEAR
-FERROR = 1.0
-MIN_FERROR = 0.5
+FERROR = 0.1
+MIN_FERROR = 0.02
 MAX_VELOCITY = 20.0
 MAX_ACCELERATION = 250.0
 
@@ -300,7 +307,7 @@ FF1 = 1
 FF2 = 0
 
 BIAS = 0
-DEADBAND = 0.0075
+DEADBAND = 0.0015
 MAX_OUTPUT = 0
 
 ENCODER_SCALE = 1000
@@ -358,7 +365,7 @@ FF1 = 1
 FF2 = 0
 
 BIAS = 0
-DEADBAND = 0.0075
+DEADBAND = 0.003
 MAX_OUTPUT = 0
 ENCODER_SCALE = 200
 # these are in nanoseconds
