Final router settings before rewiring with Mesa 7i92 and 7i75. Change XYZ orientation. min/max swap xy.

--- a/router/router.ini
+++ b/router/router.ini
@@ -21,7 +21,6 @@ GRIDS = 10mm 20mm 50mm 100mm 1in 2in 5in 10in
 MAX_FEED_OVERRIDE = 1.5
 MIN_SPINDLE_OVERRIDE = 0.25
 MAX_SPINDLE_OVERRIDE = 1.25
-DEFAULT_SPINDLE_SPEED = 20000.0
 
 DEFAULT_LINEAR_VELOCITY = 5.0
 MIN_LINEAR_VELOCITY = 0
@@ -32,9 +31,18 @@ PROGRAM_PREFIX = /home/cncbox/linuxcnc/nc_files
 INCREMENTS = 5mm 1mm .5mm .1mm .05mm .01mm .005mm
 #PYVCP = custompanel.xml
 
-EMBED_TAB_NAME=Probe Screen 
-EMBED_TAB_LOCATION = ntb_user_tabs
-EMBED_TAB_COMMAND=halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -x {XID} -u python/probe_screen.py -H probe_icons/probe_screen.hal probe_icons/probe_screen.glade 
+PREFERENCE_FILE_PATH = gmoccapy.preferences
+
+DEFAULT_SPINDLE_SPEED = 15000   
+DEFAULT_SPINDLE_0_SPEED = 15000 
+MIN_SPINDLE_0_SPEED = 500   
+MAX_SPINDLE_0_SPEED = 24000 
+MIN_SPINDLE_0_OVERRIDE = 0.25
+MAX_SPINDLE_0_OVERRIDE = 1.25
+
+#EMBED_TAB_NAME=Probe Screen 
+#EMBED_TAB_LOCATION = ntb_user_tabs
+#EMBED_TAB_COMMAND=halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -x {XID} -u python/probe_screen.py -H probe_icons/probe_screen.hal probe_icons/probe_screen.glade 
 
 #EMBED_TAB_NAME = Camera
 #EMBED_TAB_LOCATION = ntb_preview
@@ -70,12 +78,25 @@ Y = 525
 Z = 190
 
 [PYTHON]
-PATH_PREPEND = ./python
-TOPLEVEL = python/toplevel.py
+#TOPLEVEL = <filename> Filename of the initial Python script to execute on startup. This script is responsible for setting up the package name structure, see below.
+#PATH_PREPEND = <directory> Prepend this directory to PYTHON_PATH. A repeating group.
+#PATH_APPEND = <directory> Append this directory to PYTHON_PATH. A repeating group.
+#LOG_LEVEL = <integer> Log level of plugin-related actions. Increase this if you suspect problems. Can be very verbose.
+#RELOAD_ON_CHANGE = [0|1] Reload the TOPLEVEL script if the file was changed. Handy for debugging but currently incurs some runtime overhead. Turn this off for production configurations.
+#PYTHON_TASK = [0|1] Start the Python task plug in. Experimental. See xxx.
+
+#ncfiles/remap_lib/python-stdglue/stdglue.py
+#M:\linuxcnc\configs\nc_files\remap_lib\common_nc_subs (on_abort.ngc, reset_state.ngc)
+#M:\linuxcnc\configs\nc_files\remap-subroutines  (change.ngc, on_abort.ngc, prepare.ngc, qt_auto_probe_tool.ngc)
+
+# TOPLEVEL activates the python plugin.
+TOPLEVEL=~/linuxcnc/configs/router/python/toplevel.py
+PATH_PREPEND=~/linuxcnc/configs/router/python
 
 [KINS]
-KINEMATICS = trivkins coordinates=XYZY
 JOINTS = 4
+KINEMATICS = trivkins coordinates=XYZY
+kinstype=BOTH
 
 [TRAJ]
 COORDINATES = X Y Z Y
@@ -101,18 +122,25 @@ TASK = milltask
 CYCLE_TIME = 0.010
 
 [RS274NGC]
+INI_VARS = 1 
+#LOG_LEVEL = 0 Specify the log_level (default: 0)
+#LOG_FILE = file-name.log For specify the file used for log the data.
 PARAMETER_FILE = linuxcnc.var
-#INI_VARS = 1 
-#HAL_PIN_VARS = 1
-#FEATURES = 12
-FEATURES = 30
-SUBROUTINE_PATH = macros
-REMAP=M6    modalgroup=6 prolog=change_prolog ngc=tool-change epilog=change_epilog
+SUBROUTINE_PATH = macros:./macros
+HAL_PIN_VARS = 1 
+RETAIN_G43 = 0 
+OWORD_NARGS = 1 
+NO_DOWNCASE_OWORD = 0
+OWORD_WARNONLY = 0 
+DISABLE_G92_PERSISTENCE = 0 
+DISABLE_FANUC_STYLE_SUB = 0 
+ON_ABORT_COMMAND=o <on_abort> call
+#REMAP=M6 modalgroup=6 prolog=change_prolog ngc=tool-change  epilog=change_epilog
 
 [EMCMOT]
 EMCMOT = motmod
 COMM_TIMEOUT = 1.0
-BASE_PERIOD = 100000
+BASE_PERIOD =   100000
 SERVO_PERIOD = 1000000
 
 #
@@ -140,103 +168,103 @@ TOOL_TABLE = tool.tbl
 
 [AXIS_X]
 MAX_VELOCITY = 25.0
-MAX_ACCELERATION = 850.0
+MAX_ACCELERATION = 500.0
 MIN_LIMIT = -0.001
-MAX_LIMIT = 700.0
+MAX_LIMIT = 678.0
 
 [AXIS_Y]
-MAX_VELOCITY = 12.5
-MAX_ACCELERATION = 500.0
+MAX_VELOCITY = 25
+MAX_ACCELERATION = 750.0
 MIN_LIMIT = -1.0
-MAX_LIMIT = 1500.0
+MAX_LIMIT = 1415.0
 
 [AXIS_Z]
-MAX_VELOCITY = 20.0
+MAX_VELOCITY = 20
 MAX_ACCELERATION = 250.0
-MIN_LIMIT = -0.0
-MAX_LIMIT = 200.0
+MIN_LIMIT =   0.0
+MAX_LIMIT = 175.0
 
 [JOINT_0]
 TYPE = LINEAR
 MIN_LIMIT = -0.001
-MAX_LIMIT = 700.0
+MAX_LIMIT = 678.0
 MAX_VELOCITY = 25.0
-MAX_ACCELERATION = 850.0
-STEPGEN_MAXACCEL = 937.5
-SCALE = -400
+MAX_ACCELERATION =  500.0
+STEPGEN_MAXACCEL = 1000.0
+SCALE = 400
 FERROR = 1
 MIN_FERROR = .25
-HOME = 10.0
-HOME_OFFSET = -3.0
-HOME_SEARCH_VEL = -25.0
-HOME_LATCH_VEL = -2.0
-HOME_FINAL_VEL = 25.0
+HOME = 650
+HOME_OFFSET = 678.0
+HOME_SEARCH_VEL = 20.0
+HOME_LATCH_VEL  = +2.0
+HOME_FINAL_VEL  = 20.0
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = 2
 
 [JOINT_1]
 TYPE = LINEAR
 MIN_LIMIT = -1.0
-MAX_LIMIT = 1500.0
-MAX_VELOCITY = 10.0
-MAX_ACCELERATION = 450.0
-STEPGEN_MAXACCEL = 900
-SCALE = -787.4015
+MAX_LIMIT = 1415.0
+MAX_VELOCITY = 25.0
+MAX_ACCELERATION = 500.0
+STEPGEN_MAXACCEL = 1000.0
+SCALE = 400
 FERROR = 1
 MIN_FERROR = .25
-
-HOME = 10.0
-HOME_OFFSET = -5
-HOME_SEARCH_VEL = -10.00000
-HOME_LATCH_VEL = -2.0
-HOME_FINAL_VEL = 10.0
+HOME = 1400.0
+# Racking of the Y axis in controlled by the HOME_OFFSETs of JOINT_1 and JOINT_3. Adjust limit switches first. Nominal value MAX_LIMIT.
+HOME_OFFSET = 1415.0
+HOME_SEARCH_VEL = 20.0
+HOME_LATCH_VEL  =  2.0
+HOME_FINAL_VEL  = 20.0
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = -3
 
 [JOINT_2]
 TYPE = LINEAR
 MAX_VELOCITY = 20.0
-MAX_ACCELERATION = 250.0
-STEPGEN_MAXACCEL = 937.5
+MAX_ACCELERATION = 500.0
+STEPGEN_MAXACCEL = 1000.0
 SCALE = 500.0
 FERROR = 1
 MIN_FERROR = .25
-MIN_LIMIT = -0.0
-MAX_LIMIT = 200.0
-HOME = 195.0
-HOME_OFFSET = 200.0
-HOME_SEARCH_VEL = 25.0
-HOME_LATCH_VEL = -2.0
-HOME_FINAL_VEL = 20.0
+MIN_LIMIT =   0.0
+MAX_LIMIT = 175.0
+HOME = 170.0
+HOME_OFFSET = 175.0
+HOME_SEARCH_VEL = 15.0
+HOME_LATCH_VEL  = -2.0
+HOME_FINAL_VEL  = 15.0
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = 1
 
 [JOINT_3]
 TYPE = LINEAR
 MIN_LIMIT = -1.0
-MAX_LIMIT = 1500.0
-MAX_VELOCITY = 10.0
-MAX_ACCELERATION = 450.0
-STEPGEN_MAXACCEL = 900
-SCALE = -787.4015
+MAX_LIMIT = 1415.0
+MAX_VELOCITY = 25.0
+MAX_ACCELERATION = 500.0
+STEPGEN_MAXACCEL = 1000.0
+SCALE = 400
 FERROR = 1
 MIN_FERROR = .25
-
-HOME = 10.0
-HOME_OFFSET = -14.75
-HOME_SEARCH_VEL = -10.00000
-HOME_LATCH_VEL = -2.0
-HOME_FINAL_VEL = 10.0
+HOME = 1400.0
+HOME_OFFSET = 1415.0
+HOME_SEARCH_VEL = 20.00000
+HOME_LATCH_VEL  =  2.0
+HOME_FINAL_VEL  = 20.0
 HOME_IGNORE_LIMITS = YES
-HOME_SEQUENCE = -3
+  
+  HOME_SEQUENCE = -3
 
 [SPINDLE_0]
-P = 0.0001
-I = 0.07
-D = 0
-FF0 = 1
-FF1 = 0
-FF2 = 0
-BIAS = 0
-DEADBAND = 0
-MAX_OUTPUT = 24000
+#P = 0.0001
+#I = 0.07
+#D = 0
+#FF0 = 1
+#FF1 = 0
+#FF2 = 0
+#BIAS = 0
+#DEADBAND = 0
+#MAX_OUTPUT = 24000
