Still working on laser configuration. (plasma is also in place but not completely wired up)

--- a/router3/router3.ini
+++ b/router3/router3.ini
@@ -95,6 +95,26 @@ EMCIO = io
 CYCLE_TIME = 0.100
 TOOL_TABLE = tool.tbl
 
+
+#
+# Many values are generic for all joints. Easier to maintain with GENERIC_JOINT values.
+# This probably won't work with tuning but doesn't matter for simple stepper control.
+[GENERIC_JOINT]
+TYPE = LINEAR
+FERROR = 10.0
+MIN_FERROR = 1.0
+
+DIRSETUP   = 400
+DIRHOLD    = 400
+STEPLEN    = 2000
+STEPSPACE  = 4000
+
+P = 1000.0
+FF1 = 1.0
+BIAS = 0.0
+DEADBAND = 0.0
+MAX_OUTPUT = 0.0
+
 #******************************************
 [AXIS_X]
 MAX_VELOCITY = 50.0
@@ -103,25 +123,13 @@ MIN_LIMIT = -0.0
 MAX_LIMIT = 678.0
 
 [JOINT_0]
-TYPE = LINEAR
-FERROR = 10.0
-MIN_FERROR = 1.0
 MAX_VELOCITY = 50.0
 MAX_ACCELERATION = 750.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 60
 STEPGEN_MAXACCEL = 937.50
-P = 1000.0
-FF1 = 1.0
-BIAS = 0.0
-DEADBAND = 0.0
-MAX_OUTPUT = 0.0
 # these are in nanoseconds
-DIRSETUP   = 200
-DIRHOLD    = 200
-STEPLEN    = 1000
-STEPSPACE  = 2000
 STEP_SCALE = 400.0
 MIN_LIMIT = -0.0
 MAX_LIMIT = 678.0
@@ -143,29 +151,16 @@ MIN_LIMIT = -1.0
 MAX_LIMIT = 1415.0
 
 [JOINT_1]
-TYPE = LINEAR
-FERROR = 10.0
-MIN_FERROR = 1.0
 MAX_VELOCITY = 20
 MAX_ACCELERATION = 600.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 40
 STEPGEN_MAXACCEL = 1000
-P = 1000.0
-FF1 = 1.0
-BIAS = 0.0
-DEADBAND = 0.0
-MAX_OUTPUT = 0.0
-# these are in nanoseconds
-DIRSETUP   = 200
-DIRHOLD    = 200
-STEPLEN    = 1000
-STEPSPACE  = 2000
 STEP_SCALE = 400.0
 MIN_LIMIT = -1.0
 MAX_LIMIT = 1415.0
-HOME = 1400
+HOME = 1410
 HOME_OFFSET = 1415.000000
 HOME_SEARCH_VEL = 15    
 HOME_LATCH_VEL = 2
@@ -175,31 +170,18 @@ HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = -3
 
 [JOINT_2]
-TYPE = LINEAR
-FERROR = 10.0
-MIN_FERROR = 1.0
 MAX_VELOCITY = 20
 MAX_ACCELERATION = 600.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 40
 STEPGEN_MAXACCEL = 1000
-P = 1000.0
-FF1 = 1.0
-BIAS = 0.0
-DEADBAND = 0.0
-MAX_OUTPUT = 0.0
-# these are in nanoseconds
-DIRSETUP   = 200
-DIRHOLD    = 200
-STEPLEN    = 1000
-STEPSPACE  = 2000
 STEP_SCALE = 400.0
 MIN_LIMIT = -1.0
 MAX_LIMIT = 1415.0
-HOME = 1400
+HOME = 1410
 HOME_OFFSET = 1415.000000
-HOME_SEARCH_VEL = 15    
+HOME_SEARCH_VEL = 15
 HOME_LATCH_VEL = 2
 HOME_FINAL_VEL = 15
 HOME_USE_INDEX = NO
@@ -215,25 +197,12 @@ MIN_LIMIT = -0.0
 MAX_LIMIT = 175.0
 
 [JOINT_3]
-TYPE = LINEAR
-FERROR = 10.0
-MIN_FERROR = 1.0
 MAX_VELOCITY = 40
 MAX_ACCELERATION = 750.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 50
 STEPGEN_MAXACCEL = 1000
-P = 1000.0
-FF1 = 1.0
-BIAS = 0.0
-DEADBAND = 0.0
-MAX_OUTPUT = 0.0
-# these are in nanoseconds
-DIRSETUP   = 200
-DIRHOLD    = 200
-STEPLEN    = 1000
-STEPSPACE  = 2000
 STEP_SCALE = 500.0
 MIN_LIMIT = -0.0
 MAX_LIMIT = 175.0
@@ -257,3 +226,5 @@ FF2 = 0.0
 BIAS = 0.0
 DEADBAND = 0.0
 MAX_OUTPUT = 2000.0
+
+[SPINDLE_1]
