estop chain working. May want to move vfd to spindle amp fault. Using spindle.1.on for laser-enable works to turn it on but gcode waits for something???? Using invert_output true for the relays. (fixes compressor and laser turning on during powerup) Don't bother with joint mode, drop kinstype=BOTH.

--- a/Mill/Mill.ini
+++ b/Mill/Mill.ini
@@ -208,12 +208,22 @@ JOINTS = 3
 KINEMATICS = trivkins coordinates=XYZ
 
 [TRAJ]
+ARC_BLEND_ENABLE = 1
+ARC_BLEND_FALLBACK_ENABLE = 0
+ARC_BLEND_OPTIMIZATION_DEPTH = 50
+ARC_BLEND_GAP_CYCLES = 4
+ARC_BLEND_RAMP_FREQ = 100
+SPINDLES = 1
 COORDINATES =  XYZ
 LINEAR_UNITS = mm
 ANGULAR_UNITS = degree
-DEFAULT_LINEAR_VELOCITY = 5.0
+DEFAULT_LINEAR_ACCELERATION = 1000.0
+DEFAULT_LINEAR_VELOCITY = 15.0
 MAX_LINEAR_VELOCITY = 25.00
+MAX_LINEAR_ACCELERATION = 1000.00
 POSITION_FILE = position.txt
+NO_PROBE_JOG_ERROR = 0
+NO_PROBE_HOME_ERROR = 0
 
 [EMCIO]
 EMCIO = io
