--- a/router3/router3.ini
+++ b/router3/router3.ini
@@ -16,8 +16,16 @@ EMBED_TAB_COMMAND = gladevcp -c gladevcp  -H gvcp_call_list.hal -x {XID} gvcp-pa
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
 MAX_FEED_OVERRIDE = 1.500000
+
+DEFAULT_SPINDLE_SPEED = 10000
 MAX_SPINDLE_OVERRIDE = 1.250000
 MIN_SPINDLE_OVERRIDE = 0.500000
+
+DEFAULT_SPINDLE_0_SPEED = 10000
+MAX_SPINDLE_0_SPEED =   800
+MIN_SPINDLE_0_SPEED = 24000
+MAX_SPINDLE_0_OVERRIDE = 1.250000
+MIN_SPINDLE_0_OVERRIDE = 0.500000
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 PROGRAM_PREFIX = /home/cncbox/linuxcnc/nc_files
@@ -66,13 +74,13 @@ HALFILE = laser.hal
 HALFILE = mesa7i92io.hal
 HALFILE = estop-chain.hal
 #HALFILE = probes.hal
-#HALFILE = postgui_load.hal # file_with_all_loads_for_postgui.hal
-#POSTGUI_HALFILE = postgui_call_list.hal
+HALFILE = postgui_load.hal # file_with_all_loads_for_postgui.hal
+POSTGUI_HALFILE = postgui_call_list.hal
 HALFILE = custom.hal
 POSTGUI_HALFILE = gs2_vfd.hal
 POSTGUI_HALFILE = gmoccapy_postgui.hal
 POSTGUI_HALFILE = custom_postgui.hal
-#SHUTDOWN = shutdown.hal
+SHUTDOWN = shutdown.hal
 
 [HALUI]
 MDI_COMMAND = G10 L20 P0 X0 ( Set X to zero )
@@ -81,20 +89,31 @@ MDI_COMMAND = G10 L20 P0 Z0 ( Set Z to zero )
 
 [KINS]
 JOINTS = 4
-KINEMATICS = trivkins coordinates=XYYZ kinstype=BOTH
+#KINEMATICS = trivkins coordinates=XYYZ kinstype=BOTH
+KINEMATICS = trivkins coordinates=XYYZ
 
 [TRAJ]
+ARC_BLEND_ENABLE = 1
+ARC_BLEND_FALLBACK_ENABLE = 0
+ARC_BLEND_OPTIMIZATION_DEPTH = 50
+ARC_BLEND_GAP_CYCLES = 4
+ARC_BLEND_RAMP_FREQ = 100
+SPINDLES = 2
 COORDINATES =  XYYZ
 LINEAR_UNITS = mm
 ANGULAR_UNITS = degree
-DEFAULT_LINEAR_VELOCITY = 2.50
+DEFAULT_LINEAR_ACCELERATION = 1000.0
+DEFAULT_LINEAR_VELOCITY = 15.0
 MAX_LINEAR_VELOCITY = 25.00
+MAX_LINEAR_ACCELERATION = 1000.00
+POSITION_FILE = position.txt
+NO_PROBE_JOG_ERROR = 0
+NO_PROBE_HOME_ERROR = 0
 
 [EMCIO]
 EMCIO = io
 CYCLE_TIME = 0.100
 TOOL_TABLE = tool.tbl
-
 
 #
 # Many values are generic for all joints. Easier to maintain with GENERIC_JOINT values.
