Add glade files from mill for spindle. Move GS2-fault from estop latch to spindle amp fault. Correct the G540-fault correctly to an inverted gpio input.

--- a/router3/router3.ini
+++ b/router3/router3.ini
@@ -18,14 +18,23 @@ POSITION_FEEDBACK = ACTUAL
 MAX_FEED_OVERRIDE = 1.500000
 
 DEFAULT_SPINDLE_SPEED = 10000
-MAX_SPINDLE_OVERRIDE = 1.250000
-MIN_SPINDLE_OVERRIDE = 0.500000
 
 DEFAULT_SPINDLE_0_SPEED = 10000
+MAX_SPINDLE_OVERRIDE = 1.250000
+MIN_SPINDLE_OVERRIDE = 0.500000
 MAX_SPINDLE_0_SPEED =   800
 MIN_SPINDLE_0_SPEED = 24000
 MAX_SPINDLE_0_OVERRIDE = 1.250000
 MIN_SPINDLE_0_OVERRIDE = 0.500000
+#
+# Second spindle is just a simple laser diode head.
+#
+#DEFAULT_SPINDLE_1_SPEED = 100
+#MAX_SPINDLE_1_SPEED = 100
+#MIN_SPINDLE_1_SPEED = 100
+#MAX_SPINDLE_1_OVERRIDE = 1.00000
+#MIN_SPINDLE_1_OVERRIDE = 1.000000
+
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 PROGRAM_PREFIX = /home/cncbox/linuxcnc/nc_files
@@ -68,15 +77,15 @@ CARD0=hm2_7i92.0
 [HAL]
 TWOPASS = on
 HALUI = halui
-HALFILE = router3.hal
-#HALFILE = spindle.hal
-HALFILE = laser.hal
+HALFILE = basic_motion.hal
+HALFILE = Spindle.hal
+#HALFILE = laser.hal
 HALFILE = mesa7i92io.hal
 HALFILE = estop-chain.hal
 #HALFILE = probes.hal
 HALFILE = postgui_load.hal # file_with_all_loads_for_postgui.hal
 POSTGUI_HALFILE = postgui_call_list.hal
-POSTGUI_HALFILE = gs2_vfd.hal
+#POSTGUI_HALFILE = gs2_vfd.hal
 POSTGUI_HALFILE = gmoccapy_postgui.hal
 POSTGUI_HALFILE = custom_postgui.hal
 SHUTDOWN = shutdown.hal
@@ -97,7 +106,7 @@ ARC_BLEND_FALLBACK_ENABLE = 0
 ARC_BLEND_OPTIMIZATION_DEPTH = 50
 ARC_BLEND_GAP_CYCLES = 4
 ARC_BLEND_RAMP_FREQ = 100
-SPINDLES = 2
+SPINDLES = 1
 COORDINATES =  XYYZ
 LINEAR_UNITS = mm
 ANGULAR_UNITS = degree
@@ -235,14 +244,14 @@ HOME_SEQUENCE = 1
 #******************************************
 
 [SPINDLE_0]
-P = 0.0
-I = 0.0
-D = 0.0
-FF0 = 1.0
-FF1 = 0.0
-FF2 = 0.0
-BIAS = 0.0
-DEADBAND = 0.0
-MAX_OUTPUT = 2000.0
+#P = 0.0
+#I = 0.0
+#D = 0.0
+#FF0 = 1.0
+#FF1 = 0.0
+#FF2 = 0.0
+#BIAS = 0.0
+#DEADBAND = 0.0
+#MAX_OUTPUT = 2000.0
 
-[SPINDLE_1]
+#[SPINDLE_1]
