--- a/router3/router3.ini
+++ b/router3/router3.ini
@@ -22,8 +22,8 @@ DEFAULT_SPINDLE_SPEED = 10000
 DEFAULT_SPINDLE_0_SPEED = 10000
 MAX_SPINDLE_OVERRIDE = 1.250000
 MIN_SPINDLE_OVERRIDE = 0.500000
-MAX_SPINDLE_0_SPEED =   800
-MIN_SPINDLE_0_SPEED = 24000
+MAX_SPINDLE_0_SPEED = 24000
+MIN_SPINDLE_0_SPEED =   800
 MAX_SPINDLE_0_OVERRIDE = 1.250000
 MIN_SPINDLE_0_OVERRIDE = 0.500000
 #
@@ -79,13 +79,9 @@ TWOPASS = on
 HALUI = halui
 HALFILE = basic_motion.hal
 HALFILE = Spindle.hal
-#HALFILE = laser.hal
 HALFILE = mesa7i92io.hal
-HALFILE = estop-chain.hal
-#HALFILE = probes.hal
 HALFILE = postgui_load.hal # file_with_all_loads_for_postgui.hal
 POSTGUI_HALFILE = postgui_call_list.hal
-#POSTGUI_HALFILE = gs2_vfd.hal
 POSTGUI_HALFILE = gmoccapy_postgui.hal
 POSTGUI_HALFILE = custom_postgui.hal
 SHUTDOWN = shutdown.hal
@@ -97,8 +93,7 @@ MDI_COMMAND = G10 L20 P0 Z0 ( Set Z to zero )
 
 [KINS]
 JOINTS = 4
-#KINEMATICS = trivkins coordinates=XYYZ kinstype=BOTH
-KINEMATICS = trivkins coordinates=XYYZ
+KINEMATICS = trivkins coordinates=XYYZ kinstype=BOTH
 
 [TRAJ]
 ARC_BLEND_ENABLE = 1
@@ -126,10 +121,26 @@ TOOL_TABLE = tool.tbl
 #
 # Many values are generic for all joints. Easier to maintain with GENERIC_JOINT values.
 # This probably won't work with tuning but doesn't matter for simple stepper control.
+
+# Don't use GENERIC_JOINT for the following.
+##N refers to a joint number, L refers to an axis letter.
+#ini.N.ferror - (float, in) [JOINT_N]FERROR
+#ini.N.min_ferror - (float, in) [JOINT_N]MIN_FERROR
+#ini.N.backlash - (float, in) [JOINT_N]BACKLASH
+#ini.N.min_limit - (float, in) [JOINT_N]MIN_LIMIT
+#ini.N.max_limit - (float, in) [JOINT_N]MAX_LIMIT
+#ini.N.max_velocity - (float, in) [JOINT_N]MAX_VELOCITY
+#ini.N.max_acceleration - (float, in) [JOINT_N]MAX_ACCELERATION
+#ini.N.home - (float, in) [JOINT_N]HOME
+#ini.N.home_offset - (float, in) [JOINT_N]HOME_OFFSET
+#ini.N.home_offset - (s32, in) [JOINT_N]HOME_SEQUENCE
+#ini.L.min_limit - (float, in) [AXIS_L]MIN_LIMIT
+#ini.L.max_limit - (float, in) [AXIS_L]MAX_LIMIT
+#ini.L.max_velocity - (float, in) [AXIS_L]MAX_VELOCITY
+#ini.L.max_acceleration - (float, in) [AXIS_L]MAX_ACCELERATION
+
 [GENERIC_JOINT]
 TYPE = LINEAR
-FERROR = 10.0
-MIN_FERROR = 1.0
 
 DIRSETUP   = 400
 DIRHOLD    = 400
@@ -150,13 +161,12 @@ MIN_LIMIT = -0.0
 MAX_LIMIT = 678.0
 
 [JOINT_0]
+FERROR = 10.0
+MIN_FERROR = 1.0
 MAX_VELOCITY = 50.0
 MAX_ACCELERATION = 750.0
-# The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
-# If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 60
 STEPGEN_MAXACCEL = 937.50
-# these are in nanoseconds
 STEP_SCALE = 400.0
 MIN_LIMIT = -0.0
 MAX_LIMIT = 678.0
@@ -178,10 +188,10 @@ MIN_LIMIT = -1.0
 MAX_LIMIT = 1415.0
 
 [JOINT_1]
+FERROR = 10.0
+MIN_FERROR = 1.0
 MAX_VELOCITY = 20
 MAX_ACCELERATION = 600.0
-# The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
-# If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 40
 STEPGEN_MAXACCEL = 1000
 STEP_SCALE = 400.0
@@ -197,10 +207,10 @@ HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = -3
 
 [JOINT_2]
+FERROR = 10.0
+MIN_FERROR = 1.0
 MAX_VELOCITY = 20
 MAX_ACCELERATION = 600.0
-# The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
-# If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 40
 STEPGEN_MAXACCEL = 1000
 STEP_SCALE = 400.0
@@ -224,10 +234,10 @@ MIN_LIMIT = -0.0
 MAX_LIMIT = 175.0
 
 [JOINT_3]
+FERROR = 10.0
+MIN_FERROR = 1.0
 MAX_VELOCITY = 40
 MAX_ACCELERATION = 750.0
-# The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
-# If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 50
 STEPGEN_MAXACCEL = 1000
 STEP_SCALE = 500.0
