HOME XY simultaneously.

--- a/router3/router3.ini
+++ b/router3/router3.ini
@@ -22,6 +22,7 @@ DEFAULT_SPINDLE_SPEED = 10000
 DEFAULT_SPINDLE_0_SPEED = 10000
 MAX_SPINDLE_OVERRIDE = 1.250000
 MIN_SPINDLE_OVERRIDE = 0.500000
+
 MAX_SPINDLE_0_SPEED = 24000
 MIN_SPINDLE_0_SPEED =   800
 MAX_SPINDLE_0_OVERRIDE = 1.250000
@@ -79,6 +80,7 @@ TWOPASS = on
 HALUI = halui
 HALFILE = basic_motion.hal
 HALFILE = Spindle.hal
+#HALFILE = spindle_old.hal
 HALFILE = mesa7i92io.hal
 HALFILE = postgui_load.hal # file_with_all_loads_for_postgui.hal
 POSTGUI_HALFILE = postgui_call_list.hal
@@ -204,7 +206,7 @@ HOME_LATCH_VEL = 2
 HOME_FINAL_VEL = 15
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
-HOME_SEQUENCE = -3
+HOME_SEQUENCE = -2
 
 [JOINT_2]
 FERROR = 10.0
@@ -223,7 +225,7 @@ HOME_LATCH_VEL = 2
 HOME_FINAL_VEL = 15
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
-HOME_SEQUENCE = -3
+HOME_SEQUENCE = -2
 #******************************************
 
 #******************************************
