Add spindle power to gui.

--- a/router3/laser.ini
+++ b/router3/laser.ini
@@ -11,6 +11,11 @@ DISPLAY = gmoccapy
 EMBED_TAB_NAME = Center_panel
 EMBED_TAB_LOCATION = ntb_preview
 EMBED_TAB_COMMAND = gladevcp -c gladevcp  -H gvcp_call_list.hal -x {XID} gvcp-panel.ui
+
+EMBED_TAB_NAME = Laser_power
+EMBED_TAB_LOCATION = box_custom_4
+EMBED_TAB_COMMAND = gladevcp -x {XID} -H ./connect-glade-laser-pins.hal ./laser-power.glade
+
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
 MAX_FEED_OVERRIDE = 1.500000
@@ -42,6 +47,7 @@ CYCLE_TIME = 100
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
 PROGRAM_EXTENSION = .py Python Script
+PROGRAM_EXTENSION = .gcode LightBurn default
 png = image-to-gcode
 gif = image-to-gcode
 jpg = image-to-gcode
