Update some speeds.

--- a/router3/laser.ini
+++ b/router3/laser.ini
@@ -34,8 +34,8 @@ INTRO_TIME = 5
 PROGRAM_PREFIX = /home/cncbox/linuxcnc/nc_files
 INCREMENTS = 5mm 1mm .5mm .1mm .05mm .01mm .005mm
 POSITION_FEEDBACK = ACTUAL
-DEFAULT_LINEAR_VELOCITY = 12.000000
-MAX_LINEAR_VELOCITY = 25.000000
+DEFAULT_LINEAR_VELOCITY = 25.000000
+MAX_LINEAR_VELOCITY = 40.000000
 MIN_LINEAR_VELOCITY = 0.500000
 DEFAULT_ANGULAR_VELOCITY = 12.000000
 MAX_ANGULAR_VELOCITY = 180.000000
@@ -136,27 +136,26 @@ MAX_OUTPUT = 0.0
 
 #******************************************
 [AXIS_X]
-MAX_VELOCITY = 50.0
-MAX_ACCELERATION = 750.0
+MAX_VELOCITY = 30.0
+MAX_ACCELERATION = 1000.0
 MIN_LIMIT = -0.0
 MAX_LIMIT = 678.0
 
 [JOINT_0]
+FERROR = 10.0
+MIN_FERROR = 1.0
 MAX_VELOCITY = 30.0
-MAX_ACCELERATION = 750.0
-# The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
-# If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
+MAX_ACCELERATION = 1000.0
 STEPGEN_MAXVEL = 60
 STEPGEN_MAXACCEL = 937.50
-# these are in nanoseconds
 STEP_SCALE = 400.0
 MIN_LIMIT = -0.0
 MAX_LIMIT = 678.0
 HOME = 650
 HOME_OFFSET = 678.0
-HOME_SEARCH_VEL = 20    
+HOME_SEARCH_VEL = 30.0   
 HOME_LATCH_VEL = 2
-HOME_FINAL_VEL = 20
+HOME_FINAL_VEL = 30
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = 2
@@ -164,45 +163,45 @@ HOME_SEQUENCE = 2
 
 #******************************************
 [AXIS_Y]
-MAX_VELOCITY = 20
-MAX_ACCELERATION = 500.0
+MAX_VELOCITY = 25
+MAX_ACCELERATION = 900.0
 MIN_LIMIT = -1.0
-MAX_LIMIT = 1415.0
+MAX_LIMIT = 1428.0
 
 [JOINT_1]
-MAX_VELOCITY = 20
-MAX_ACCELERATION = 500.0
-# The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
-# If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
+FERROR = 10.0
+MIN_FERROR = 1.0
+MAX_VELOCITY = 25
+MAX_ACCELERATION = 900.0
 STEPGEN_MAXVEL = 25
-STEPGEN_MAXACCEL = 700
+STEPGEN_MAXACCEL = 1000
 STEP_SCALE = 400.0
 MIN_LIMIT = -1.0
-MAX_LIMIT = 1415.0
-HOME = 1410
-HOME_OFFSET = 1415.000000
-HOME_SEARCH_VEL = 15    
+MAX_LIMIT = 1428.0
+HOME = 1400
+HOME_OFFSET = 1428.0
+HOME_SEARCH_VEL = 22.5    
 HOME_LATCH_VEL = 2
-HOME_FINAL_VEL = 15
+HOME_FINAL_VEL = 22.5
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = -2
 
 [JOINT_2]
-MAX_VELOCITY = 20
-MAX_ACCELERATION = 500.0
-# The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
-# If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
+FERROR = 10.0
+MIN_FERROR = 1.0
+MAX_VELOCITY = 25
+MAX_ACCELERATION = 900.0
 STEPGEN_MAXVEL = 25
-STEPGEN_MAXACCEL = 700
+STEPGEN_MAXACCEL = 1000
 STEP_SCALE = 400.0
 MIN_LIMIT = -1.0
-MAX_LIMIT = 1415.0
-HOME = 1410
-HOME_OFFSET = 1415.000000
-HOME_SEARCH_VEL = 15
+MAX_LIMIT = 1428.0
+HOME = 1400
+HOME_OFFSET = 1428.0
+HOME_SEARCH_VEL = 22.5
 HOME_LATCH_VEL = 2
-HOME_FINAL_VEL = 15
+HOME_FINAL_VEL = 22.5
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = -2
@@ -211,28 +210,39 @@ HOME_SEQUENCE = -2
 #******************************************
 [AXIS_Z]
 MAX_VELOCITY = 40
-MAX_ACCELERATION = 750.0
+MAX_ACCELERATION = 1000
 MIN_LIMIT = -0.0
 MAX_LIMIT = 175.0
 
 [JOINT_3]
-MAX_VELOCITY = 30
-MAX_ACCELERATION = 750.0
-# The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
-# If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
+FERROR = 10.0
+MIN_FERROR = 1.0
+MAX_VELOCITY = 40
+MAX_ACCELERATION = 1000.0
 STEPGEN_MAXVEL = 50
 STEPGEN_MAXACCEL = 1000
 STEP_SCALE = 500.0
 MIN_LIMIT = -0.0
 MAX_LIMIT = 175.0
-HOME = 174.5
+HOME = 170
 HOME_OFFSET = 175.000000
-HOME_SEARCH_VEL = 25
+HOME_SEARCH_VEL = 40
 HOME_LATCH_VEL = 2
-HOME_FINAL_VEL = 25
+HOME_FINAL_VEL = 40
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = 1
 #******************************************
 
 [SPINDLE_0]
+#P = 0.0
+#I = 0.0
+#D = 0.0
+#FF0 = 1.0
+#FF1 = 0.0
+#FF2 = 0.0
+#BIAS = 0.0
+#DEADBAND = 0.0
+#MAX_OUTPUT = 2000.0
+
+#[SPINDLE_1]
