--- a/router3/router3.ini
+++ b/router3/router3.ini
@@ -37,8 +37,8 @@ INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 PROGRAM_PREFIX = /home/cncbox/linuxcnc/nc_files
 INCREMENTS = 5mm 1mm .5mm .1mm .05mm .01mm .005mm
-DEFAULT_LINEAR_VELOCITY = 12.000000
-MAX_LINEAR_VELOCITY = 30.000000
+DEFAULT_LINEAR_VELOCITY = 25.000000
+MAX_LINEAR_VELOCITY = 40.000000
 MIN_LINEAR_VELOCITY = 0.500000
 DEFAULT_ANGULAR_VELOCITY = 12.000000
 MAX_ANGULAR_VELOCITY = 180.000000
@@ -103,8 +103,8 @@ COORDINATES =  XYYZ
 LINEAR_UNITS = mm
 ANGULAR_UNITS = degree
 DEFAULT_LINEAR_ACCELERATION = 1000.0
-DEFAULT_LINEAR_VELOCITY = 20.0
-MAX_LINEAR_VELOCITY = 50.00
+DEFAULT_LINEAR_VELOCITY = 25.0
+MAX_LINEAR_VELOCITY = 30.00
 MAX_LINEAR_ACCELERATION = 1000.00
 POSITION_FILE = position.txt
 NO_PROBE_JOG_ERROR = 0
@@ -115,6 +115,10 @@ EMCIO = io
 CYCLE_TIME = 0.100
 TOOL_TABLE = tool.tbl
 
+#
+# Many values are generic for all joints. Easier to maintain with GENERIC_JOINT values.
+# This probably won't work with tuning but doesn't matter for simple stepper control.
+#
 [GENERIC_JOINT]
 TYPE = LINEAR
 
@@ -148,7 +152,7 @@ MIN_LIMIT = -0.0
 MAX_LIMIT = 678.0
 HOME = 650
 HOME_OFFSET = 678.0
-HOME_SEARCH_VEL = 30    
+HOME_SEARCH_VEL = 30.0   
 HOME_LATCH_VEL = 2
 HOME_FINAL_VEL = 30
 HOME_USE_INDEX = NO
@@ -158,48 +162,48 @@ HOME_SEQUENCE = 2
 
 #******************************************
 [AXIS_Y]
-MAX_VELOCITY = 25
+MAX_VELOCITY = 22.5
 MAX_ACCELERATION = 500.0
 MIN_LIMIT = -1.0
-MAX_LIMIT = 1415.0
+MAX_LIMIT = 1428.0
 
 [JOINT_1]
 FERROR = 10.0
 MIN_FERROR = 1.0
-MAX_VELOCITY = 25
+MAX_VELOCITY = 22.5
 MAX_ACCELERATION = 500.0
 STEPGEN_MAXVEL = 25
 STEPGEN_MAXACCEL = 700
 STEP_SCALE = 400.0
 MIN_LIMIT = -1.0
-MAX_LIMIT = 1415.0
-HOME = 1410
-HOME_OFFSET = 1415.000000
-HOME_SEARCH_VEL = 25    
+MAX_LIMIT = 1428.0
+HOME = 1400
+HOME_OFFSET = 1428.0
+HOME_SEARCH_VEL = 22.5    
 HOME_LATCH_VEL = 2
-HOME_FINAL_VEL = 25
+HOME_FINAL_VEL = 22.5
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
-HOME_SEQUENCE = -3
+HOME_SEQUENCE = -2
 
 [JOINT_2]
 FERROR = 10.0
 MIN_FERROR = 1.0
-MAX_VELOCITY = 25
+MAX_VELOCITY = 22.5
 MAX_ACCELERATION = 500.0
 STEPGEN_MAXVEL = 25
 STEPGEN_MAXACCEL = 700
 STEP_SCALE = 400.0
 MIN_LIMIT = -1.0
-MAX_LIMIT = 1415.0
-HOME = 1410
-HOME_OFFSET = 1415.000000
-HOME_SEARCH_VEL = 25
+MAX_LIMIT = 1428.0
+HOME = 1400
+HOME_OFFSET = 1428.0
+HOME_SEARCH_VEL = 22.5
 HOME_LATCH_VEL = 2
-HOME_FINAL_VEL = 25
+HOME_FINAL_VEL = 22.5
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
-HOME_SEQUENCE = -3
+HOME_SEQUENCE = -2
 #******************************************
 
 #******************************************
