--- a/latheMesa/latheMesa.ini
+++ b/latheMesa/latheMesa.ini
@@ -56,8 +56,8 @@ CYCLE_TIME = 100
 
 DEFAULT_SPINDLE_SPEED = 300
 DEFAULT_SPINDLE_0_SPEED = 300
-MIN_SPINDLE_0_SPEED = 80
-MAX_SPINDLE_0_SPEED = 800
+MIN_SPINDLE_0_SPEED = 100
+MAX_SPINDLE_0_SPEED = 2650
 MIN_SPINDLE_0_OVERRIDE = 0.25
 MAX_SPINDLE_0_OVERRIDE = 1.25
 
@@ -226,17 +226,17 @@ HOME_SEQUENCE = 0
 #LOCKING_INDEXER = NO
 
 [SPINDLE_0]
-P = 2
-I = 1.5
+P = 0.85
+I = 0
 D = 0
-FF0 = 1
+FF0 = 0
 FF1 = 0
 FF2 = 0
 BIAS = 0
 DEADBAND = 0
-MAX_OUTPUT = 1000
-OUTPUT_SCALE = 2000
-OUTPUT_MIN_LIMIT = -1000
-OUTPUT_MAX_LIMIT = 1000
+MAX_OUTPUT = 2500
+#OUTPUT_SCALE = 2000
+#OUTPUT_MIN_LIMIT = -1000
+#OUTPUT_MAX_LIMIT = 1000
 
 ENCODER_SCALE = 260
