Move spindle and estop functionality to separate files.

--- a/John My Mill/my-mill1.ini
+++ b/John My Mill/my-mill1.ini
@@ -56,6 +56,8 @@ SERVO_PERIOD = 1000000
 TWOPASS = on
 HALUI = halui
 HALFILE = my-mill1.hal
+HALFILE = spindle.hal
+HALFILE = estop-chain.hal
 HALFILE = custom.hal
 POSTGUI_HALFILE = postgui_call_list.hal
 
