Fix jog xy. Adjust speeds.

--- a/router3/router3.ini
+++ b/router3/router3.ini
@@ -75,7 +75,7 @@ CARD0=hm2_7i92.0
 TWOPASS = on
 HALUI = halui
 HALFILE = basic_motion.hal
-HALFILE = Spindle.hal
+HALFILE = SpindleCommanderSK.hal
 HALFILE = mesa7i92io.hal
 HALFILE = postgui_load.hal # file_with_all_loads_for_postgui.hal
 POSTGUI_HALFILE = postgui_call_list.hal
@@ -162,7 +162,7 @@ HOME_SEQUENCE = 2
 
 #******************************************
 [AXIS_Y]
-MAX_VELOCITY = 22.5
+MAX_VELOCITY = 20
 MAX_ACCELERATION = 500.0
 MIN_LIMIT = -1.0
 MAX_LIMIT = 1428.0
@@ -170,7 +170,7 @@ MAX_LIMIT = 1428.0
 [JOINT_1]
 FERROR = 10.0
 MIN_FERROR = 1.0
-MAX_VELOCITY = 22.5
+MAX_VELOCITY = 20
 MAX_ACCELERATION = 500.0
 STEPGEN_MAXVEL = 25
 STEPGEN_MAXACCEL = 700
@@ -179,9 +179,9 @@ MIN_LIMIT = -1.0
 MAX_LIMIT = 1428.0
 HOME = 1400
 HOME_OFFSET = 1428.0
-HOME_SEARCH_VEL = 22.5    
+HOME_SEARCH_VEL = 20    
 HOME_LATCH_VEL = 2
-HOME_FINAL_VEL = 22.5
+HOME_FINAL_VEL = 20
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = -2
@@ -189,7 +189,7 @@ HOME_SEQUENCE = -2
 [JOINT_2]
 FERROR = 10.0
 MIN_FERROR = 1.0
-MAX_VELOCITY = 22.5
+MAX_VELOCITY = 20
 MAX_ACCELERATION = 500.0
 STEPGEN_MAXVEL = 25
 STEPGEN_MAXACCEL = 700
@@ -198,9 +198,9 @@ MIN_LIMIT = -1.0
 MAX_LIMIT = 1428.0
 HOME = 1400
 HOME_OFFSET = 1428.0
-HOME_SEARCH_VEL = 22.5
+HOME_SEARCH_VEL = 20
 HOME_LATCH_VEL = 2
-HOME_FINAL_VEL = 22.5
+HOME_FINAL_VEL = 20
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = -2
@@ -208,7 +208,7 @@ HOME_SEQUENCE = -2
 
 #******************************************
 [AXIS_Z]
-MAX_VELOCITY = 40
+MAX_VELOCITY = 35           
 MAX_ACCELERATION = 750.0
 MIN_LIMIT = -0.0
 MAX_LIMIT = 175.0
@@ -216,7 +216,7 @@ MAX_LIMIT = 175.0
 [JOINT_3]
 FERROR = 10.0
 MIN_FERROR = 1.0
-MAX_VELOCITY = 40
+MAX_VELOCITY = 35
 MAX_ACCELERATION = 750.0
 STEPGEN_MAXVEL = 50
 STEPGEN_MAXACCEL = 1000
@@ -225,9 +225,9 @@ MIN_LIMIT = -0.0
 MAX_LIMIT = 175.0
 HOME = 170
 HOME_OFFSET = 175.000000
-HOME_SEARCH_VEL = 40
+HOME_SEARCH_VEL = 30
 HOME_LATCH_VEL = 2
-HOME_FINAL_VEL = 40
+HOME_FINAL_VEL = 30
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = 1
