Use VFD.hal for router config.

--- a/router3/router3.ini
+++ b/router3/router3.ini
@@ -75,7 +75,7 @@ CARD0=hm2_7i92.0
 TWOPASS = on
 HALUI = halui
 HALFILE = basic_motion.hal
-HALFILE = SpindleCommanderSK.hal
+HALFILE = VFD.hal
 HALFILE = mesa7i92io.hal
 HALFILE = postgui_load.hal # file_with_all_loads_for_postgui.hal
 POSTGUI_HALFILE = postgui_call_list.hal
