--- a/router3/laser.ini
+++ b/router3/laser.ini
@@ -8,13 +8,14 @@ VERSION = 1.1
 
 [DISPLAY]
 DISPLAY = gmoccapy
-EMBED_TAB_NAME = Center_panel
-EMBED_TAB_LOCATION = ntb_preview
-EMBED_TAB_COMMAND = gladevcp -c gladevcp  -H gvcp_call_list.hal -x {XID} gvcp-panel.ui
 
-EMBED_TAB_NAME = Laser_power
-EMBED_TAB_LOCATION = box_custom_4
-EMBED_TAB_COMMAND = gladevcp -x {XID} -H ./connect-glade-laser-pins.hal ./laser-power.glade
+#EMBED_TAB_NAME = Center_panel
+#EMBED_TAB_LOCATION = ntb_preview
+#EMBED_TAB_COMMAND = gladevcp -c gladevcp  -H gvcp_call_list.hal -x {XID} gvcp-panel.ui
+
+#EMBED_TAB_NAME = Laser_power
+#EMBED_TAB_LOCATION = box_custom_4
+#EMBED_TAB_COMMAND = gladevcp -x {XID} -H ./connect-glade-laser-pins.hal ./laser-power.glade
 
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
