Files before rewiring to use Commander SK VFD and use 7i95 inputs directly instead of going through G540.

--- a/latheMesa/latheMesa.ini
+++ b/latheMesa/latheMesa.ini
@@ -20,7 +20,7 @@ DISPLAY = gmoccapy
 
 EMBED_TAB_NAME = Center_panel
 EMBED_TAB_LOCATION = ntb_preview
-EMBED_TAB_COMMAND = gladevcp -c gladevcp  -H gvcp_call_list.hal -x {XID} gvcp-panel.ui
+EMBED_TAB_COMMAND = gladevcp -c gladevcp  -H gvcp_call_list.[hal] -x {XID} gvcp-panel.ui
 #EMBED_TAB_NAME = DRO
 #EMBED_TAB_LOCATION = ntb_user_tabs
 #EMBED_TAB_COMMAND = gladevcp -x {XID} dro.glade
@@ -54,8 +54,8 @@ EDITOR = nano
 GEOMETRY = xz
 CYCLE_TIME = 100
 
-DEFAULT_SPINDLE_SPEED = 300
-DEFAULT_SPINDLE_0_SPEED = 300
+DEFAULT_SPINDLE_SPEED = 100
+DEFAULT_SPINDLE_0_SPEED = 100
 MIN_SPINDLE_0_SPEED = 100
 MAX_SPINDLE_0_SPEED = 2650
 MIN_SPINDLE_0_OVERRIDE = 0.25
@@ -93,6 +93,7 @@ TWOPASS = on
 HALUI = halui
 HALFILE = latheMesa.hal
 HALFILE = LatheSpindle.hal
+#HALFILE = VFD.hal
 HALFILE = estop-chain.hal
 HALFILE = custom.hal
 POSTGUI_HALFILE = postgui_call_list.hal
@@ -125,8 +126,8 @@ MAX_LIMIT = 105.0
 
 [JOINT_0]
 TYPE = LINEAR
-FERROR = 0.5
-MIN_FERROR = 0.5
+FERROR = 1.0    
+MIN_FERROR = 1.0
 
 MAX_VELOCITY = 12.0
 MAX_ACCELERATION = 750.0
@@ -134,14 +135,14 @@ MAX_ACCELERATION = 750.0
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 31.25
 STEPGEN_MAXACCEL = 937.5
-P = 350
-I = 0
+P = 100
+I = 0.01
 D = 0
 FF0 = 0
 FF1 = 1
 FF2 = 0
 BIAS = 0
-DEADBAND = 0.002
+DEADBAND = 0.0075
 MAX_OUTPUT = 0
 # these are in nanoseconds
 DIRSETUP   = 10000
@@ -160,9 +161,9 @@ HOME = 100.0
 #
 # Home setup.
 #
-HOME_SEARCH_VEL = 10.0
-HOME_LATCH_VEL = -1.0
-HOME_FINAL_VEL = 10.0
+HOME_SEARCH_VEL = 7.5
+HOME_LATCH_VEL = -0.75
+HOME_FINAL_VEL = 5.0
 HOME_IGNORE_LIMITS = YES
 HOME_USE_INDEX = YES
 #HOME_INDEX_NO_ENCODER_RESET = YES
@@ -176,7 +177,7 @@ HOME_SEQUENCE = 1
 [AXIS_Z]
 MAX_VELOCITY = 12.0
 MAX_ACCELERATION = 500.0
-MIN_LIMIT = -100.0
+MIN_LIMIT = -300.0
 MAX_LIMIT = 300.0
 
 [JOINT_1]
@@ -190,14 +191,14 @@ MAX_ACCELERATION = 500.0
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 31.25
 STEPGEN_MAXACCEL = 937.5
-P = 400
-I = 0
+P = 150
+I = 0.01
 D = 0
 FF0 = 0
 FF1 = 1
 FF2 = 0
 BIAS = 0
-DEADBAND = 0.005
+DEADBAND = 0.0075
 MAX_OUTPUT = 0
 # these are in nanoseconds
 DIRSETUP   = 10000
@@ -206,7 +207,7 @@ STEPLEN    = 5000
 STEPSPACE  = 5000
 STEP_SCALE = 400
 ENCODER_SCALE = 200
-MIN_LIMIT = -100.0
+MIN_LIMIT = -300.0
 MAX_LIMIT = 300.0
 #
 # Home setup.
