--- a/latheMesa/latheMesa.ini
+++ b/latheMesa/latheMesa.ini
@@ -92,8 +92,9 @@ CARD0=hm2_7i96.0
 TWOPASS = on
 HALUI = halui
 HALFILE = latheMesa.hal
+HALFILE = mesa7i96io.hal
 HALFILE = LatheSpindle.hal
-#HALFILE = VFD.hal
+HALFILE = VFD.hal
 HALFILE = estop-chain.hal
 HALFILE = custom.hal
 POSTGUI_HALFILE = postgui_call_list.hal
@@ -227,10 +228,10 @@ HOME_SEQUENCE = 0
 #LOCKING_INDEXER = NO
 
 [SPINDLE_0]
-P = 0.85
+P = 0.0
 I = 0
 D = 0
-FF0 = 0
+FF0 = 1.3
 FF1 = 0
 FF2 = 0
 BIAS = 0
@@ -239,5 +240,4 @@ MAX_OUTPUT = 2500
 #OUTPUT_SCALE = 2000
 #OUTPUT_MIN_LIMIT = -1000
 #OUTPUT_MAX_LIMIT = 1000
-
 ENCODER_SCALE = 260
