Implement pid.s.FF0 for scaling RPM. Add [SPINDLE_0] parameters for pid.s and add message for maximum motor speed.

--- a/Mill/Mill.ini
+++ b/Mill/Mill.ini
@@ -93,9 +93,14 @@ MESSAGE_TYPE = okdialog
 MESSAGE_PINNAME =  estop-z-encoder
 
 MESSAGE_BOLDTEXT = NONE
-MESSAGE_TEXT = Spindle Quadrature Estop/Fault.
+MESSAGE_TEXT = Spindle Quadrature Fault.
 MESSAGE_TYPE = okdialog
 MESSAGE_PINNAME = estop-s-encoder
+
+MESSAGE_BOLDTEXT = NONE
+MESSAGE_TEXT = VFD using maximum motor RPM.
+MESSAGE_TYPE = okdialog
+MESSAGE_PINNAME = VFD-max-motor-rpm
 
 [PROBE_SCREEN]
 # Offset from [AXIS_Z]MAX_LIMIT for performing moves during various probe
@@ -402,3 +407,21 @@ HOME_IS_SHARED = NO
 #HOME_ABSOLUTE_ENCODER = NO
 HOME_SEQUENCE = 0
 #VOLATILE_HOME = NO
+
+[SPINDLE_0]
+P = 0
+I = 0
+D = 0
+#
+# Use calibration to modify FF0 for the motor:spindle belt ratio.
+# Rockwell Mill has six different ratios with a nominal 1725 RPM 60 hz motor.
+#   RPM     FF0
+#   6300   
+#   4420  
+#   2440
+#   1180  1.135
+#    700
+#    370
+#
+FF0 = 1.135
+MAX_OUTPUT = 1800
