--- a/latheMesa/latheMesa.ini
+++ b/latheMesa/latheMesa.ini
@@ -60,8 +60,13 @@ MIN_SPINDLE_0_SPEED = 100
 MAX_SPINDLE_0_SPEED = 2650
 MIN_SPINDLE_0_OVERRIDE = 0.25
 MAX_SPINDLE_0_OVERRIDE = 1.25
-
-#PYVCP = custompanel.xml
+#
+# User Created Message HAL Pins.
+#
+MESSAGE_BOLDTEXT = NONE
+MESSAGE_TEXT = VFD using maximum motor RPM.
+MESSAGE_TYPE = okdialog
+MESSAGE_PINNAME = VFD-max-motor-rpm
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
@@ -136,8 +141,8 @@ MAX_ACCELERATION = 750.0
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 31.25
 STEPGEN_MAXACCEL = 937.5
-P = 100
-I = 0.01
+P = 0
+I = 0
 D = 0
 FF0 = 0
 FF1 = 1
@@ -228,16 +233,9 @@ HOME_SEQUENCE = 0
 #LOCKING_INDEXER = NO
 
 [SPINDLE_0]
-P = 0.0
+P = 0
 I = 0
 D = 0
-FF0 = 1.3
-FF1 = 0
-FF2 = 0
-BIAS = 0
-DEADBAND = 0
-MAX_OUTPUT = 2500
-#OUTPUT_SCALE = 2000
-#OUTPUT_MIN_LIMIT = -1000
-#OUTPUT_MAX_LIMIT = 1000
+FF0 = 3.18
+MAX_OUTPUT = 70
 ENCODER_SCALE = 260
